--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -25,7 +25,7 @@
   border: 3px solid white;
   border-radius: 8px;
   height: 50px;
-  width: 40%;            /* ukuran default di desktop */
+  max-width: 300px;            /* ukuran default di desktop */
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
